test/good/sets/comprehension01.px

print {for i in 1..100 yield i//3}.length
