test/bad/sets/comprehension01.px

{for i in 1..0 yield {i}}
